--- a/Views/Home/ArtistProfile.cshtml
+++ b/Views/Home/ArtistProfile.cshtml
@@ -115,10 +115,11 @@
                 {
                     @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Artist"))
                     {
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a asp-controller="home" asp-action="ArtistProfile"
                         class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
-                        </li>
+                        </li>*@
+                          <li><a class="nav-link font2 mx-2 item-6 text-white" asp-controller="home" asp-action="CustomArtRequest">ART  REQUESTS</a></li>
                     }
 
                 }
@@ -173,9 +174,9 @@
                     <a asp-controller="home" asp-action="UploadArtwork"
                         class="btn btn3 shadow-none border-pink text-pink ms-1 me-2 px-3 rounded text-decoration-none font2 ">Upload
                         Artwork</a>
-                    <a asp-controller="home" asp-action="CustomArtRequest"
+                   @* <a asp-controller="home" asp-action="CustomArtRequest"
                         class="btn btn3 shadow-none border-pink text-pink me-4 px-3 rounded text-decoration-none font2 ">Custom
-                        Art Requests</a>
+                        Art Requests</a>*@
                 </form>
             </div>
         </div>
@@ -187,10 +188,12 @@
             </thead>
         </table>
         <div class="row g-4">
-            @foreach (var collection in ViewBag.artistCollection)
-            {
-                <div class="col-12 col-lg-4 col-md-6 ">
-                    <div class="card shadow rounded-3">
+            @* @if (ViewBag.collection)
+            {*@
+                @foreach (var collection in ViewBag.artistCollection)
+                {
+                    <div class="col-12 col-lg-4 col-md-6 ">
+                        <div class="card shadow rounded-3">
                         <img class="aspect-16-9 img-fluid img-cover rounded-top rounded-3"
                         src="~/uploads/@(collection.File)" class="card-img-top" alt="Fissure in Sandstone" />
                         <div class="card-body">
@@ -205,10 +208,13 @@
                 </div>
 
             }
+            @*}*@
         </div>
+        @*else{*@
         <div class="my-5 py-5">
             <p class="text-center">You have not uploaded any images</p>
         </div>
+        @*}*@
     </div>
 </section>
 
