--- a/Views/Home/UploadArtwork.cshtml
+++ b/Views/Home/UploadArtwork.cshtml
@@ -37,9 +37,25 @@
                                 </div>
                             </div>
                             <div class="row py-2">
-                                <div>
+                                @*<div>
                                     <label for="inputText" class="form-label">Category</label>
                                     <input type="text" class="form-control" id="inputText" name="Category" required>
+                                    </div>*@
+                                <div>
+                                    <label class="pb-2" for="autoSizingSelect">Category</label>
+                                    <select class="form-select" id="autoSizingSelect">
+                                        <option selected>Choose...</option>
+                                        <option value="1">Painting</option>
+                                        <option value="2">Drawing</option>
+                                        <option value="3">Origami</option>
+                                        <option value="4">String Art</option>
+                                        <option value="5">Sketches</option>
+                                        <option value="6">Room Decor</option>
+                                        <option value="7">Wall Art</option>
+                                        <option value="8">Pottery</option>
+                                        <option value="9">Frame</option>
+                                        <option value="10">Any Other</option>
+                                    </select>
                                 </div>
                             </div>
                             <div class="row py-2">
@@ -50,11 +66,11 @@
                             </div>
                             <div class="row py-2">
                                 <div>
-                                <label for="exampleFormControlTextarea" class="form-label">
-                                    Description
-                                </label>                
-                                <textarea class="form-control" id="exampleFormControlTextarea" rows="1"></textarea>
-                                 </div>
+                                    <label for="exampleFormControlTextarea" class="form-label">
+                                        Description
+                                    </label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea" rows="1"></textarea>
+                                </div>
                             </div>
                             <div class="d-grid gap-2 col-sm-8 ms-auto me-auto pt-3">
                                 <button type="submit" class="btn btn-primary rounded-pill shadow-none">Upload</button>
