--- a/Views/Home/CancelOrderRequest.cshtml
+++ b/Views/Home/CancelOrderRequest.cshtml
@@ -132,7 +132,7 @@
                         <label for="exampleFormControlTextarea1" class="form-label">
                            Reason For Cancellation:
                         </label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea class="form-control shadow-none border-danger border-1" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                    </form>
                    <a asp-controller="home" asp-action="CancelOrder" class="col-12  col-sm-6 col-lg-12 col-md-6  btn btn-danger btn-lg mt-3 fs-6  font2   shadow-none">Cancel
