--- a/Views/Home/ReviewOrder.cshtml
+++ b/Views/Home/ReviewOrder.cshtml
@@ -125,6 +125,9 @@
                     Review Your Order
                 </span>
             </div>
+           @* <div class="shadow row  mt-3 mb-5 p-3 mx-5">
+                <h5 class=" text-orange">Delivery Date: 2 March 2022</h5>
+            </div>*@
             <div class="shadow row  mt-3 mb-5 p-3 mx-5">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-12 my-2">
                     <h5 class="mb-3">Shipping Address <a asp-controller="home" asp-action="Address"
@@ -150,20 +153,6 @@
                     order</a>
                 </div>
             </div>
-            <div class="shadow row  mt-3 mb-5 p-3 mx-5">
-                <h5 class=" text-orange">Delivery Date: 2 March 2022</h5>
-                @*<div class="col-lg-2">
-                    <img src="~/img/Painting1.jpg" class="my-3" style="height: 6rem; width: 6rem;" alt="">
-                </div>
-                <div class="col-lg-10 mt-3">    
-                    <p class="lh-1">Painting on stretched canvas</p>
-                    <p class="lh-1">Finished edges </p>
-                    <p class="lh-1"> Ready to hang</p>
-                    <p class="lh-1"> 20'' h x 16'' w x .75'' d 1 lbs. 1 oz</p>
-                    <p class="lh-1">PRICE - Rs 400 </p>
-                    <p class="lh-1">Quantity:1  <a asp-controller="home" asp-action="Cart"
-                        class="ms-2 fs-6 text-orange">Change</a></p>
-                </div>*@
-            </div>
+         
         </div>
 </section>
